# GraduateThesis

./: BaselineSolver.py  F.nb  GradientDescentSolver.py  GreedySolver.py  IterativeSolver.py  average-simplex-volume.nb  dynamical-system-x.nb  main.py  makeTests.nb  minimal-gap-illustrations.nb  nb.ipynb  optimize-t-on-grids-illustrations.nb  src.py  utils.py
GeneralSolver/: CMakeLists.txt  GeneralSolver.cpp  GeneralSolver.h  SimplexInBallTestReader.cpp  SimplexInBallTestReader.h  TestReader.cpp  TestReader.h  main.cpp
GeneralSolver/test-results/: simplex-in-ball-2d
tests/2d/: 1.csv  10.csv  100.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
tests/3d/: 1.csv  10.csv  100.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
tests/4d/: 1.csv  10.csv  100.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
tests/5d/: 1.csv  10.csv  100.csv  (+97 more)
(+2506 files in other folders)
